theme, scrollbar, obsidian folder bug

--- a/styles/prism.css
+++ b/styles/prism.css
@@ -1,7 +1,7 @@
 /* PrismJS 1.28.0
 https://prismjs.com/download.html#themes=prism&languages=markup+css+clike+javascript */
 pre {
-    background-color: #f5f2f0
+    background-color: #1a1e21
 }
 
 code[class*=language-], pre[class*=language-] {
